--- a/.github/workflows/check-readme.yml
+++ b/.github/workflows/check-readme.yml
@@ -4,7 +4,7 @@ name: check-readme
 # Controls when the workflow will run
 on:
   pull_request:
-  
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -25,3 +25,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
+          level: warning
+          filter_mode: nofilter
+          fail_on_error: true
