--- a/.github/workflows/check-readme.yml
+++ b/.github/workflows/check-readme.yml
@@ -27,4 +27,4 @@ jobs:
           reporter: github-pr-review
           level: warning
           filter_mode: nofilter
-          fail_on_error: true
+          #fail_on_error: true
